syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message PlayerGameTimeNotify {
	bool is_home = 6;
	uint32 game_time = 3;
	uint32 uid = 5;
}