syntax = "proto3";
option java_package = "emu.grasscutter.net.proto";



message SkipPlayerGameTimeRsp {
	int32 retcode = 12;
	uint32 game_time = 5;
	uint32 client_game_time = 10;
}